made changes for deployment

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.poi-3.10.1-20140818.jar=poi-3.10.1-20140818.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.poi-3.10.1-20140818.jar}
 # Space-separated list of extra javac options
